feat(shopping): unit-aware pricing and validProducts as Map in optimizer
- ShoppingItemDomain: add `unit` field to carry product unit through route
- ShoppingOptimizer: use unit price for weight/volume items (KG, GRAM, etc.)
  and regular price for countable items; validProducts now Map<Long, ProductDomain>
  for O(1) lookups instead of O(n) list scans
- ShoppingContext: validProducts type changed from List to Map<Long, ProductDomain>
- ShoppingOptimizationResult: minor formatting cleanup

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>